--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-scroll": "^1.7.15",
     "react-slick": "^0.25.2"
   },
   "scripts": {
