--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aos": "^2.3.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "firebase": "^7.6.1",
+    "jest-enzyme": "^7.1.2",
     "node-sass": "^4.13.0",
     "nodemailer": "^6.4.2",
     "react": "^16.12.0",
